--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
         "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
+        "laravel-mix": "~6.0.49",
         "laravel-vite-plugin": "^1.2.0",
+        "resolve-url-loader": "5.0.0",
+        "sass-loader": "12.1.0",
         "tailwindcss": "^4.0.0",
         "vite": "^6.0.11"
     }
